# efrei-l3-se-tp4-ipc

./: CMakeLists.txt  Rapport.md  a.out  copy.c  fileno.c  juste_prix.c  n_tubes_shell.c  producer_consumer.c  redirection_sdtout.c  test-redirection.txt  tube_shell.c
